--- a/configure.ac
+++ b/configure.ac
@@ -3,12 +3,13 @@ AC_INIT(tang, 1)
 AC_CONFIG_MACRO_DIRS([m4])
 AC_CANONICAL_SYSTEM
 AC_PROG_CC_C99
+AC_PROG_RANLIB
+AC_PROG_SED
 
 AM_INIT_AUTOMAKE([subdir-objects foreign no-dist-gzip dist-bzip2 parallel-tests])
 AM_SILENT_RULES([yes])
 AM_PROG_CC_C_O
-
-LT_INIT([disable-static])
+AM_PROG_AR
 
 PKG_PROG_PKG_CONFIG([0.25])
 
