--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,8 +1,8 @@
 AM_CFLAGS = @TANG_CFLAGS@ @LIBCRYPTO_CFLAGS@
-LDADD = libtest.la ../libcommon.la @LIBCRYPTO_LIBS@
+LDADD = libtest.a ../libcommon.a @LIBCRYPTO_LIBS@
 
-check_LTLIBRARIES = libtest.la
-libtest_la_SOURCES = client.c
+check_LIBRARIES = libtest.a
+libtest_a_SOURCES = client.c
 
 check_PROGRAMS = serve send
 TESTS = $(check_PROGRAMS)
