Initial stab at a clevis plugin

--- a/configure.ac
+++ b/configure.ac
@@ -3,13 +3,13 @@ AC_INIT(tang, 1)
 AC_CONFIG_MACRO_DIRS([m4])
 AC_CANONICAL_SYSTEM
 AC_PROG_CC_C99
-AC_PROG_RANLIB
 AC_PROG_SED
 
 AM_INIT_AUTOMAKE([subdir-objects foreign no-dist-gzip dist-bzip2 parallel-tests])
 AM_SILENT_RULES([yes])
 AM_PROG_CC_C_O
-AM_PROG_AR
+
+LT_INIT([disable-static])
 
 PKG_PROG_PKG_CONFIG([0.25])
 
@@ -39,6 +39,18 @@ AC_ARG_WITH(
 )
 AC_SUBST([systemdsystemunitdir], [$with_systemdsystemunitdir])
 
+PKG_CHECK_MODULES([CLEVIS], [clevis])
+AC_ARG_WITH(
+    [clevispindir],
+    AS_HELP_STRING(
+        [--with-clevispindir=DIR],
+        [Directory for clevis pins]
+    ),
+    [],
+    [with_clevispindir=$($PKG_CONFIG --variable=pindir clevis)]
+)
+AC_SUBST([clevispindir], [$with_clevispindir])
+
 TANG_CFLAGS="\
 -Wall \
 -Wextra \
@@ -65,5 +77,5 @@ AC_DEFINE([TANG_PORT], [5700])
 AC_SUBST([TANG_DB], [${localstatedir}/${PACKAGE_NAME}])
 AX_DEFINE_DIR(TANG_DB, TANG_DB, [Location of key database])
 
-AC_CONFIG_FILES([Makefile src/Makefile src/progs/Makefile src/tests/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile src/progs/Makefile src/tests/Makefile src/clevis/Makefile])
 AC_OUTPUT
