--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,5 +1,5 @@
 AM_CFLAGS = @TANG_CFLAGS@ @LIBCRYPTO_CFLAGS@
-LDADD = libtest.a ../libcommon.a @LIBCRYPTO_LIBS@
+LDADD = libtest.a ../libcore.a @LIBCRYPTO_LIBS@
 
 check_LIBRARIES = libtest.a
 libtest_a_SOURCES = client.c
