--- a/configure.ac
+++ b/configure.ac
@@ -3,17 +3,18 @@ AC_INIT(tang, 1)
 AC_CONFIG_MACRO_DIRS([m4])
 AC_CANONICAL_SYSTEM
 AC_PROG_CC_C99
+AC_PROG_RANLIB
 AC_PROG_SED
 
 AM_INIT_AUTOMAKE([subdir-objects foreign no-dist-gzip dist-bzip2 parallel-tests])
 AM_SILENT_RULES([yes])
 AM_PROG_CC_C_O
-
-LT_INIT([disable-static])
+AM_PROG_AR
 
 PKG_PROG_PKG_CONFIG([0.25])
 
 PKG_CHECK_MODULES([LIBCRYPTO], [libcrypto])
+PKG_CHECK_MODULES([CRYPTSETUP], [libcryptsetup])
 
 PKG_CHECK_MODULES(
     [LIBSYSTEMD],
@@ -77,5 +78,5 @@ AC_DEFINE([TANG_PORT], [5700])
 AC_SUBST([TANG_DB], [${localstatedir}/${PACKAGE_NAME}])
 AX_DEFINE_DIR(TANG_DB, TANG_DB, [Location of key database])
 
-AC_CONFIG_FILES([Makefile src/Makefile src/progs/Makefile src/tests/Makefile src/clevis/Makefile])
+AC_CONFIG_FILES([Makefile src/Makefile src/tests/Makefile])
 AC_OUTPUT
