Make dracut optional

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,10 +6,12 @@ EXTRA_DIST = tang-keyd.socket.in tang-keyd.service.in
 CLEANFILES = $(systemdsystemunit_DATA)
 
 if USE_CRYPTSETUP
+if USE_DRACUT
 dracutmodules_SCRIPTS = module-setup.sh
+CLEANFILES += $(dracutmodules_SCRIPTS)
+endif
 systemdsystemunit_DATA += tang-luksd.path tang-luksd.service
 EXTRA_DIST += tang-luksd.path.in tang-luksd.service.in module-setup.sh.in
-CLEANFILES += $(dracutmodules_SCRIPTS)
 endif
 
 %: %.in
