--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,6 +4,8 @@ AM_CFLAGS = @LIBCRYPTO_CFLAGS@ @cryptsetup_CFLAGS@ -fPIC
 AM_LDFLAGS = @LIBCRYPTO_LIBS@
 LIBS = libcore.a
 
+libexec_PROGRAMS =
+
 noinst_LIBRARIES = libcore.a libclt.a libsrv.a
 libcore_a_SOURCES = core/asn1.c core/asn1.h core/conv.c core/conv.h core/pkt.c core/pkt.h core/list.c core/list.h
 libclt_a_SOURCES = clt/adv.c clt/adv.h clt/rec.c clt/rec.h clt/msg.c clt/msg.h clt/skey.c clt/skey.h
@@ -12,8 +14,12 @@ libsrv_a_SOURCES = srv/adv.c srv/adv.h srv/db.c srv/db.h srv/rec.c srv/rec.h srv
 bin_PROGRAMS = tang tang-key-gen tang-key-mod tang-key-send tang-key-groups
 tang_key_send_LDADD = libsrv.a
 
-libexec_PROGRAMS = tang-keyd
+if USE_SYSTEMD
+if USE_LIBSYSTEMD
+libexec_PROGRAMS += tang-keyd
 tang_keyd_LDADD = libsrv.a
+endif
+endif
 
 if USE_CLEVIS
 clevispin_PROGRAMS = tang.so
@@ -23,9 +29,8 @@ tang_so_LDFLAGS = -shared -Wl,--version-script=clevis.sym
 endif
 
 if USE_CRYPTSETUP
-noinst_LIBRARIES += libluks.a libaskpass.a
+noinst_LIBRARIES += libluks.a
 libluks_a_SOURCES = luks/luks.c luks/luks.h luks/meta.c luks/meta.h luks/asn1.c luks/asn1.h
-libaskpass_a_SOURCES = askpass/question.c askpass/question.h askpass/iface.c askpass/iface.h askpass/askp.c askpass/askp.h
 
 bin_PROGRAMS += tang-luks-bind tang-luks-list tang-luks-unbind
 tang_luks_bind_LDADD = libclt.a libluks.a
@@ -35,8 +40,13 @@ tang_luks_list_LDFLAGS = @cryptsetup_LIBS@ $(AM_LDFLAGS)
 tang_luks_unbind_LDADD = libluks.a
 tang_luks_unbind_LDFLAGS = @cryptsetup_LIBS@ $(AM_LDFLAGS)
 
+if USE_SYSTEMD
+noinst_LIBRARIES += libaskpass.a
+libaskpass_a_SOURCES = askpass/question.c askpass/question.h askpass/iface.c askpass/iface.h askpass/askp.c askpass/askp.h
+
 libexec_PROGRAMS += tang-luksd
 tang_luksd_LDADD = libaskpass.a libluks.a libclt.a
 tang_luksd_LDFLAGS = @cryptsetup_LIBS@ $(AM_LDFLAGS)
+endif
 endif
 
