--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 SUBDIRS = . tests
 
-AM_CFLAGS = @LIBCRYPTO_CFLAGS@ @cryptsetup_CFLAGS@ -fPIC
-AM_LDFLAGS = @LIBCRYPTO_LIBS@
+AM_CFLAGS = @libcrypto_CFLAGS@ @cryptsetup_CFLAGS@ -fPIC
+AM_LDFLAGS = @libcrypto_LIBS@
 LIBS = libcore.a
 
 libexec_PROGRAMS =
