--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -4,5 +4,5 @@ LDADD = libtest.a ../libcore.a @libcrypto_LIBS@
 check_LIBRARIES = libtest.a
 libtest_a_SOURCES = client.c
 
-check_PROGRAMS = serve send
+check_PROGRAMS = serve
 TESTS = $(check_PROGRAMS)
