--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,5 +1,5 @@
-AM_CFLAGS = @TANG_CFLAGS@ @LIBCRYPTO_CFLAGS@
-LDADD = libtest.a ../libcore.a @LIBCRYPTO_LIBS@
+AM_CFLAGS = @TANG_CFLAGS@ @libcrypto_CFLAGS@
+LDADD = libtest.a ../libcore.a @libcrypto_LIBS@
 
 check_LIBRARIES = libtest.a
 libtest_a_SOURCES = client.c
