--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -4,5 +4,9 @@ LDADD = libtest.a ../libcore.a @libcrypto_LIBS@
 check_LIBRARIES = libtest.a
 libtest_a_SOURCES = client.c
 
+if USE_SYSTEMD
+if USE_LIBSYSTEMD
 check_PROGRAMS = serve
 TESTS = $(check_PROGRAMS)
+endif
+endif
