--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: c
-before_install:
-  - sudo sed -i 's|trusty|wily|g' /etc/apt/sources.list
-  - sudo apt-get update -y
-  - sudo apt-get remove -y 'postgres.*'
-  - sudo apt-get -o Dpkg::Options::="--force-confnew" dist-upgrade -y
-  - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y libsystemd-dev libssl-dev libcryptsetup-dev automake autoconf make gcc clang
 before_script:
   - autoreconf -if
 script:
   - ./configure --prefix=/usr
   - make -k
   - make check
-sudo: required
-dist: trusty
 compiler:
   - clang
   - gcc
+dist: trusty
+addons:
+  apt:
+    packages:
+      - libcryptsetup-dev
+      - libssl-dev
+      - libudisks2-dev
